--- a/templates/resolution.html
+++ b/templates/resolution.html
@@ -40,7 +40,15 @@
 						<tr>
 							<td class="rtable rtable-default">Requirement</td>
 							<td class="rtable rtable-space"></td>
-							<td class="rtable rtable-default" ng-repeat="p in results"> {{p.requirement.process}}{{p.requirement.pageNumber}}</td>
+							<td class="rtable rtable-default" ng-repeat="p in results">
+								{{
+									{
+										'read': p.requirement.process + p.requirement.pageNumber + 'R',
+										'write': p.requirement.process + p.requirement.pageNumber + 'W',
+										'finish': p.requirement.process + 'F'
+									}[p.requirement.mode]
+								}}
+							</td>
 						</tr>
 					</thead>
 					<tbody>
@@ -49,9 +57,8 @@
 							<td class="rtable rtable-frame">Frame {{n}}</td>
 							<td class="rtable rtable-space"></td>
 							<td class="rtable rtable-frame" ng-repeat="p in results"
-							ng-class= frameClassFor(p.frames[n])>
-								{{p.frames[n].reservedForPageBuffering ? '' : (p.frames[n].process + p.frames[n].pageNumber)}}
-
+							ng-class= frameClassFor(p.frames[n],p)>
+								{{(p.frames[n].reservedForPageBuffering || p.frames[n].finished) ? '' : (p.frames[n].process + p.frames[n].pageNumber)}}
 							</td>
 						</tr>
 						<!-- render page faults -->
@@ -75,7 +82,7 @@
 							<td class="rtable rtable-default">Victims' Queue</td>
 							<td class="rtable rtable-space"></td>
 							<td class="rtable rtable-default" ng-repeat="p in results">
-								<button type="button" name="button" class="btn"> <span class="glyphicon glyphicon-chevron-down"></span></button>
+								<button type="button" name="button" class="btn btn-primary btn-lg"> <span class="glyphicon glyphicon-chevron-down"></span></button>
 							</td>
 						</tr>
 					</tbody>
@@ -87,7 +94,7 @@
 				<div class="panel panel-default panel-body grey-color">
 			    <div class="row">
 
-						<div class="col-xs-offset-1 col-xs-2">
+						<div class="col-xs-2">
 							<div class="panel panel-default">
 							  <div class="panel-body rtable-legend rtable-frame">
 							    Empty frame, frame with no changes
@@ -119,6 +126,13 @@
 							<div class="panel panel-default">
 							  <div class="panel-body rtable-legend rtable-async">
 							    Frame reserved for Page Buffering
+							  </div>
+							</div>
+						</div>
+						<div class="col-xs-2">
+							<div class="panel panel-default">
+							  <div class="panel-body rtable-legend rtable-finished">
+							  	Frame freed from a finished process
 							  </div>
 							</div>
 						</div>
