--- a/templates/resolution.html
+++ b/templates/resolution.html
@@ -19,12 +19,6 @@
 		<!-- /Back-Forward buttons -->
 
 		<div class="row">
-		<!-- general info panel -->
-			<div class="col-xs-offset-1 col-xs-10">
-				<div class="panel panel-default panel-body grey-color">
-				    general info panel
-				</div>
-			</div>
 		<!-- Rendered Table -->
 			<div class="col-sm-12">
 				<!-- results memory-->
@@ -94,42 +88,42 @@
 				<div class="panel panel-default panel-body grey-color">
 			    <div class="row">
 
-						<div class="col-xs-2">
+						<div class="col-lg-2 col-sm-4 col-xs-12">
 							<div class="panel panel-default">
 							  <div class="panel-body rtable-legend rtable-frame">
 							    Empty frame, frame with no changes
 							  </div>
 							</div>
 						</div>
-						<div class="col-xs-2">
+						<div class="col-lg-2 col-sm-4 col-xs-12">
 							<div class="panel panel-default">
 							  <div class="panel-body rtable-legend rtable-newinmemory">
 							    New page in memory
 							  </div>
 							</div>
 						</div>
-						<div class="col-xs-2">
+						<div class="col-lg-2 col-sm-4 col-xs-12">
 							<div class="panel panel-default">
 							  <div class="panel-body rtable-legend rtable-referenced">
 							    Referenced page
 							  </div>
 							</div>
 						</div>
-						<div class="col-xs-2">
+						<div class="col-lg-2 col-sm-4 col-xs-12">
 							<div class="panel panel-default">
 							  <div class="panel-body rtable-legend rtable-modified">
 							    Modified page
 							  </div>
 							</div>
 						</div>
-						<div class="col-xs-2">
+						<div class="col-lg-2 col-sm-4 col-xs-12">
 							<div class="panel panel-default">
 							  <div class="panel-body rtable-legend rtable-async">
 							    Frame reserved for Page Buffering
 							  </div>
 							</div>
 						</div>
-						<div class="col-xs-2">
+						<div class="col-lg-2 col-sm-4 col-xs-12">
 							<div class="panel panel-default">
 							  <div class="panel-body rtable-legend rtable-finished">
 							  	Frame freed from a finished process
@@ -141,6 +135,12 @@
 				</div>
 			</div>
 			<!--/legend panel-->
+			<!-- general info panel -->
+			<div class="col-xs-offset-1 col-xs-10">
+				<div class="panel panel-default panel-body grey-color">
+				    general info panel
+				</div>
+			</div>
 		</div>
   </div>
 </div>
