--- a/templates/resolution.html
+++ b/templates/resolution.html
@@ -89,7 +89,7 @@
 		<!-- Render victim queue -->
 			<div class="col-xs-offset-1 col-xs-10">
 				<div class="panel panel-default panel-body grey-color">
-					<table>
+					<table id="victims-queue">
 						<tbody>
 							<tr>
 								<td class="rtable rtable-default" ng-repeat="v in victimsQueue">
