--- a/css/sams.css
+++ b/css/sams.css
@@ -366,6 +366,9 @@ New classes
 }
 
 .center-table {
+  table-layout:fixed;
+  margin-top:30px;
+  margin-bottom:30px;
   margin-left: auto;
   margin-right: auto;
   display: table;
@@ -381,4 +384,17 @@ New classes
 
 .text-default {
   color: #6265B1
+}
+
+@media print {
+  body *:not(.printable *) {
+    display: none;
+  }
+  .no-printable {
+    display: none !important;
+  }
+  .printable {
+    page-break-before: always;
+    page-break-after: always;
+  }
 }
