Fix float in button print

--- a/templates/resolution.html
+++ b/templates/resolution.html
@@ -70,7 +70,7 @@
 						</tr>
 					</tbody>
 				</table>
-				<button class="btn btn-primary btn no-printable" ng-click="print()"><span class="glyphicon glyphicon-print"></span> Print</button>
+				<button class="btn btn-primary btn pull-left no-printable" ng-click="print()"><span class="glyphicon glyphicon-print"></span> Print</button>
 				<button class="btn btn-success btn pull-right no-printable" ng-click="checkSolution()"> Check solution <span class="glyphicon glyphicon-ok"></span></button>
 			</div>
 			<!-- /Rendered User Solution Table -->
